Set up PhotoRater portfolio site

--- a/src/_includes/sections/header.html
+++ b/src/_includes/sections/header.html
@@ -56,6 +56,11 @@
                             Blog
                         </a>
                     </li>
+                    <li class="cs-li">
+                        <a href="/privacy/" class="cs-li-link {% if page.url == "/privacy/" %} cs-active {% endif %}">
+                            Privacy
+                        </a>
+                    </li>
                     <li class="cs-li cs-hide-on-desktop">
                         <a href="/contact/" class="cs-li-link {% if page.url == "/contact/" %} cs-active {% endif %}">
                             Contact
