--- a/src/_includes/sections/footer.html
+++ b/src/_includes/sections/footer.html
@@ -42,6 +42,9 @@
                 <a class="cs-nav-link" href="/blog/">Blog</a>
             </li>
             <li class="cs-nav-li">
+                <a class="cs-nav-link" href="/privacy/">Privacy</a>
+            </li>
+            <li class="cs-nav-li">
                 <a class="cs-nav-link" href="/contact/">Contact</a>
             </li>
         </ul>
